homework/contrail-security/app-dev.yml
apiVersion: v1
kind: Pod
metadata:
  name: app-dev 
  namespace: default
  labels:
    deployment: Development 
    tier: App
    site: China
    app: HR-HCM 
spec:
  containers:
  - name: fawadshaikh
    image: "fshaikh/sshvimallow:7.0"
    command:
      - tailf
      - "/dev/null"
    imagePullPolicy: ""
  restartPolicy: Always
