homework/contrail-security/policy-web-to-app-prod.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webtoapp 
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: App
      deployment: Production 
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: Web 
          deployment: Production
